Implement partial diffusion protocol for binders, with batching

--- a/conf/mlerp.config
+++ b/conf/mlerp.config
@@ -6,6 +6,7 @@ params {
         silenttools = "containers/proteinmpnn_fastrelax_latest.sif"
         dl_binder_design_proteinmpnn = "containers/proteinmpnn_fastrelax_latest.sif"
         af2_initial_guess = "containers/af2_initial_guess_nv-cuda12.sif"
+        get_contigs = "containers/proteinmpnn_fastrelax_latest.sif"
     }
 }
 
@@ -28,6 +29,10 @@ process {
     maxRetries = 0
     cache = 'lenient'
 
+    withName: GET_CONTIGS {
+        container = params.containers.get_contigs
+    }
+
     withName: RFDIFFUSION {
         clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
         time = 24.hours
@@ -40,6 +45,15 @@ process {
         accelerator = 1
 
         memory = '24g' // '8g' is probably enough
+        cpus = 2
+    }
+    
+    withName: RFDIFFUSION_PARTIAL {
+        container = params.containers.rfdiffusion
+        accelerator = 1
+        time = 24.hours
+
+        memory = '8g' // '8g' is probably enough
         cpus = 2
     }
     
@@ -105,8 +119,8 @@ profiles {
         process {
             executor = 'local'
             stageInMode = 'symlink'
-            errorStrategy = 'retry'
-            maxRetries = 1
+            // errorStrategy = 'retry'
+            maxRetries = 0
             cache = 'lenient'
         }
     }
