--- a/nextflow.config
+++ b/nextflow.config
@@ -1,11 +1,13 @@
 params {
     // Container paths
     containers {
-        rfdiffusion = "containers/rfdiffusion_cuda11-b44206a.sif"
-        // rfdiffusion = "containers/rfdiffusion_pytorch2407-weights-b44206a.sif"
+        //rfdiffusion = "containers/rfdiffusion_cuda11-b44206a.sif"
+        rfdiffusion = "containers/rfdiffusion_pytorch2407-weights-b44206a.sif"
+        // rfdiffusion = "ghcr.io/australian-protein-design-initiative/containers/rfdiffusion:pytorch2407-weights-b44206a"
         silenttools = "containers/proteinmpnn_fastrelax_latest.sif"
         dl_binder_design_proteinmpnn = "containers/proteinmpnn_fastrelax_latest.sif"
         af2_initial_guess = "containers/af2_initial_guess_nv-cuda12.sif"
+        get_contigs = "containers/proteinmpnn_fastrelax_latest.sif"
     }
 }
 
@@ -28,7 +30,20 @@ process {
     maxRetries = 0
     cache = 'lenient'
 
+    withName: GET_CONTIGS {
+        container = params.containers.get_contigs
+    }
+
     withName: RFDIFFUSION {
+        container = params.containers.rfdiffusion
+        accelerator = 1
+        time = 24.hours
+
+        memory = '8g' // '8g' is probably enough
+        cpus = 2
+    }
+
+    withName: RFDIFFUSION_PARTIAL {
         container = params.containers.rfdiffusion
         accelerator = 1
         time = 24.hours
@@ -71,7 +86,7 @@ apptainer {
     enabled = true
     autoMounts = true
     // --nv to enable NVIDIA GPU support
-    runOptions = "--nv -B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights"
+    // runOptions = "--nv -B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights"
 }
 
 docker {
@@ -89,8 +104,7 @@ profiles {
         process {
             executor = 'local'
             stageInMode = 'symlink'
-            errorStrategy = 'retry'
-            maxRetries = 1
+            maxRetries = 0
             cache = 'lenient'
         }
     }
