Partial diffusion fixes for chain order and residue numbering.
When models used for partial diffusion come directly from an RFDiffusion denovo binder run, the chain and residue numbering is largely compatible with partial diffusion immediately. For other sources (like BindCraft models) the chain order and residue numbering my not be compabile with RFDiffusions slightly restrictive/quirky requirements. This should hopefully fix that.

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,7 @@ params {
         dl_binder_design_proteinmpnn = "containers/proteinmpnn_fastrelax_latest.sif"
         af2_initial_guess = "containers/af2_initial_guess_nv-cuda12.sif"
         get_contigs = "containers/proteinmpnn_fastrelax_latest.sif"
+        renumber_residues = "containers/proteinmpnn_fastrelax_latest.sif"
     }
 }
 
@@ -32,6 +33,10 @@ process {
 
     withName: GET_CONTIGS {
         container = params.containers.get_contigs
+    }
+
+    withName: RENUMBER_RESIDUES {
+        container = params.containers.renumber_residues
     }
 
     withName: RFDIFFUSION {
