Add platform specific configs, update README

--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -1,15 +1,3 @@
-params {
-    // Container paths
-    containers {
-        rfdiffusion = "containers/rfdiffusion_cuda11-b44206a.sif"
-        // rfdiffusion = "containers/rfdiffusion_pytorch2407-weights-b44206a.sif"
-        silenttools = "containers/proteinmpnn_fastrelax_latest.sif"
-        dl_binder_design_proteinmpnn = "containers/proteinmpnn_fastrelax_latest.sif"
-        af2_initial_guess = "containers/af2_initial_guess_nv-cuda12.sif"
-        get_contigs = "containers/proteinmpnn_fastrelax_latest.sif"
-    }
-}
-
 def random_choice(choices) {
     return choices[new Random().nextInt(choices.size())]
 }
@@ -31,13 +19,27 @@ process {
 
     withName: GET_CONTIGS {
         container = params.containers.get_contigs
+        executor = 'local'
+    }
+    
+    withName: RENUMBER_RESIDUES {
+        container = params.containers.renumber_residues
+        executor = 'local'
+    }
+
+    withName: COMBINE_SCORES {
+        container = params.containers.combine_scores
+        executor = 'local'
     }
 
     withName: RFDIFFUSION {
         clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
         time = 24.hours
 
+        // suitable for smaller targets
         // clusterOptions = '--gres=gpu:2g.10gb:1 --partition=BigCats --qos=cheetah'
+
+        // suitable for smaller targets
         // clusterOptions = '--gres=' + random_choice(['gpu:2g.10gb:1', 'gpu:3g.20gb:1']) + ' --partition=BigCats --qos=cheetah'
         // time = 30.minutes
 
@@ -64,10 +66,6 @@ process {
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
         container = params.containers.dl_binder_design_proteinmpnn
         
-        //accelerator = 1
-        //clusterOptions = '--gres=gpu:2g.10gb:1 --partition=BigCats --qos=cheetah'
-        //time = 30.minutes
-
         // CPU only on MLeRP
         clusterOptions = '--partition=BigCats --qos=panther'
         time = 30.minutes
@@ -84,9 +82,11 @@ process {
         container = params.containers.af2_initial_guess
         accelerator = 1
 
+
         clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
         time = 24.hours
 
+        // suitable for smaller targets
         //clusterOptions = '--gres=gpu:3g.20gb:1 --qos=lion --partition=BigCats'
         //time = 30.minutes
 
@@ -102,26 +102,4 @@ apptainer {
     // --nv to enable NVIDIA GPU support
     runOptions = "--nv -B /mnt/userdata2 -B /mnt/userdata3 -B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights"
     // '-B /home/andrewpe/projects/apdi/alphafold/2022-12-06/model_weights:/app/dl_binder_design/af2_initial_guess/model_weights'
-}
-
-docker {
-    // --gpus all to enable NVIDIA GPU support
-    runOptions = '--gpus all'
-}
-
-profiles {
-    local {
-        executor {
-            name = 'local'
-            queueSize = 32
-            pollInterval = '30 sec'
-        }
-        process {
-            executor = 'local'
-            stageInMode = 'symlink'
-            // errorStrategy = 'retry'
-            maxRetries = 0
-            cache = 'lenient'
-        }
-    }
 }
