--- a/nextflow.config
+++ b/nextflow.config
@@ -1,26 +1,35 @@
+manifest {
+    name            = 'nf-binder-design'
+    author          = """Andrew Perry"""
+    homePage        = 'https://github.com/Australian-Protein-Design-Initiative/nf-binder-design'
+    description     = """Protein binder design pipeline"""
+    mainScript      = 'main.nf'
+    nextflowVersion = '!>=23.04.0'
+    version         = '0.1'
+    // doi             = 'TBD'
+}
+
 params {
+    models_basepath = "${projectDir}/models"
+    container_basepath = "${projectDir}/containers"
     // Container paths
     containers {
         //rfdiffusion = "containers/rfdiffusion_cuda11-b44206a.sif"
-        rfdiffusion = "containers/rfdiffusion_pytorch2407-weights-b44206a.sif"
+        rfdiffusion = "${container_basepath}/rfdiffusion_pytorch2407-weights-b44206a.sif"
+        silenttools = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
+        dl_binder_design_proteinmpnn = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
+        af2_initial_guess = "${container_basepath}/af2_initial_guess_nv-cuda12.sif"
+        get_contigs = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
+        renumber_residues = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
+        combine_scores = "${container_basepath}/rfdiffusion_pytorch2407-weights-b44206a.sif"
+
+        // get_contigs = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_fastrelax:latest"
+        // renumber_residues = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_fastrelax:latest"
+        // silenttools = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_fastrelax:latest"
         // rfdiffusion = "ghcr.io/australian-protein-design-initiative/containers/rfdiffusion:pytorch2407-weights-b44206a"
-        silenttools = "containers/proteinmpnn_fastrelax_latest.sif"
-        dl_binder_design_proteinmpnn = "containers/proteinmpnn_fastrelax_latest.sif"
-        af2_initial_guess = "containers/af2_initial_guess_nv-cuda12.sif"
-        get_contigs = "containers/proteinmpnn_fastrelax_latest.sif"
-        renumber_residues = "containers/proteinmpnn_fastrelax_latest.sif"
-    }
-}
-
-def random_choice(choices) {
-    return choices[new Random().nextInt(choices.size())]
-}
-
-executor {
-    $slurm {
-      queueSize = 200
-      pollInterval = '30 sec'
-      queueStatInterval = '10m'
+        // dl_binder_design_proteinmpnn = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_dl_binder_design:latest"
+        // af2_initial_guess = "ghcr.io/australian-protein-design-initiative/containers/af2_initial_guess:nv-cuda12"
+        // combine_scores = "ghcr.io/australian-protein-design-initiative/containers/rfdiffusion:pytorch2407-weights-b44206a"
     }
 }
 
@@ -33,10 +42,17 @@ process {
 
     withName: GET_CONTIGS {
         container = params.containers.get_contigs
+        executor = 'local'
     }
 
     withName: RENUMBER_RESIDUES {
         container = params.containers.renumber_residues
+        executor = 'local'
+    }
+
+    withName: COMBINE_SCORES {
+        container = params.containers.combine_scores
+        executor = 'local'
     }
 
     withName: RFDIFFUSION {
@@ -113,7 +129,32 @@ profiles {
             cache = 'lenient'
         }
     }
+    slurm {
+        executor {
+            name = 'slurm'
+            queueSize = 900
+            pollInterval = '30 sec'
+            queueStatInterval = '10m'
+        }
+        process {
+            executor = 'slurm'
+            stageInMode = 'symlink'
+            // errorStrategy = 'retry'
+            maxRetries = 0
+            cache = 'lenient'
+        }
+    }
+    hq {
+        executor {
+            name = 'hq'
+            queueSize = 900
+            pollInterval = '5 sec'
+        }
+        process {
+            executor = 'hq'
+            stageInMode = 'symlink'
+            maxRetries = 0
+            cache = 'lenient'
+        }
+    }
 }
-
-// Include platform specific settings / overrides
-// includeConfig 'conf/mlerp.config'
