--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -2,6 +2,17 @@ params {
     models_basepath = '/scratch2/kl63/apdi/nf-binder-design/models'
     container_basepath = '/scratch2/kl63/apdi/nf-binder-design/containers'
 
+    containers {
+        rfdiffusion = "${container_basepath}/rfdiffusion_pytorch2407-weights-b44206a.sif"
+        silenttools = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
+        dl_binder_design_proteinmpnn = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
+        af2_initial_guess = "${container_basepath}/af2_initial_guess_nv-cuda12.sif"
+        get_contigs = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
+        renumber_residues = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
+        //combine_scores = "${container_basepath}/rfdiffusion_pytorch2407-weights-b44206a.sif"
+        combine_scores = "${container_basepath}/ghcr.io_australian-protein-design-initiative_containers_mdanalysis_2.8.0.sif"
+    }
+
     slurm_account = 'kl63'
     //slurm_account = 'df22'
 }
