Fix M3 config account for DL_BINDER_DESIGN_PROTEINMPNN

--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -84,7 +84,7 @@ process {
 
         // CPU only
         // clusterOptions = "--account df22 --partition=genomics --qos=genomics"
-        clusterOptions = "--account df22 --partition=comp --qos=shortq"
+        clusterOptions = "--account ${params.slurm_account} --partition=comp --qos=shortq"
         time = 30.minutes
 
         memory = '4g'
