Add UNIQUE_ID to config examples
Add COMBINE_SCORES to rotibom config
Update M3 project

--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -13,8 +13,7 @@ params {
         combine_scores = "${container_basepath}/ghcr.io_australian-protein-design-initiative_containers_mdanalysis_2.8.0.sif"
     }
 
-    slurm_account = 'kl63'
-    //slurm_account = 'df22'
+    slurm_account = 'yt41'
 }
 
 def random_choice(choices) {
@@ -36,6 +35,10 @@ process {
     maxRetries = 1
     cache = 'lenient'
     
+    withName: UNIQUE_ID {
+        executor = 'local'
+    }
+
     withName: GET_CONTIGS {
         container = params.containers.get_contigs
         executor = 'local'
