--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -17,6 +17,10 @@ process {
     maxRetries = 0
     cache = 'lenient'
 
+    withName: UNIQUE_ID {
+        executor = 'local'
+    }
+
     withName: GET_CONTIGS {
         container = params.containers.get_contigs
         executor = 'local'
