--- a/conf/platforms/rotibom-hyperqueue.config
+++ b/conf/platforms/rotibom-hyperqueue.config
@@ -5,12 +5,21 @@ process {
     maxRetries = 3
     cache = 'lenient'
 
-    withName: RENUMBER_RESIDUES {
-        container = params.containers.renumber_residues
+    withName: UNIQUE_ID {
+        executor = 'local'
     }
 
     withName: GET_CONTIGS {
         container = params.containers.get_contigs
+    }
+    
+    withName: RENUMBER_RESIDUES {
+        container = params.containers.renumber_residues
+    }
+
+    withName: COMBINE_SCORES {
+        container = params.containers.combine_scores
+        executor = 'local'
     }
 
     withName: RFDIFFUSION {
