Update to use containers from Github package registry
Added container URL to each process
Removed explicit container images from config files
Make --slurm_account an optional param for M3 config

--- a/conf/platforms/rotibom-hyperqueue.config
+++ b/conf/platforms/rotibom-hyperqueue.config
@@ -10,20 +10,20 @@ process {
     }
 
     withName: GET_CONTIGS {
-        container = params.containers.get_contigs
+        //container = params.containers.get_contigs
     }
     
     withName: RENUMBER_RESIDUES {
-        container = params.containers.renumber_residues
+        //container = params.containers.renumber_residues
     }
 
     withName: COMBINE_SCORES {
-        container = params.containers.combine_scores
+        //container = params.containers.combine_scores
         executor = 'local'
     }
 
     withName: RFDIFFUSION {
-        container = params.containers.rfdiffusion
+        //container = params.containers.rfdiffusion
         clusterOptions = "--resource gpus/nvidia=1"
         time = 24.hours
 
@@ -32,7 +32,7 @@ process {
     }
 
     withName: RFDIFFUSION_PARTIAL {
-        container = params.containers.rfdiffusion
+        //container = params.containers.rfdiffusion
         clusterOptions = "--resource gpus/nvidia=1"
         time = 24.hours
 
@@ -41,11 +41,11 @@ process {
     }
     
     withName: SILENT_FROM_PDBS {
-        container = params.containers.silenttools
+        //container = params.containers.silenttools
     }
     
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
-        container = params.containers.dl_binder_design_proteinmpnn
+        //container = params.containers.dl_binder_design_proteinmpnn
         
         // Since this is effectively CPU only and quick, we probably can also just
         // run it on the local node
@@ -57,7 +57,7 @@ process {
     }
     
     withName: AF2_INITIAL_GUESS {
-        container = params.containers.af2_initial_guess
+        //container = params.containers.af2_initial_guess
         clusterOptions = "--resource gpus/nvidia=1"
         time = 30.minutes
         memory = '16g'
@@ -70,6 +70,7 @@ process {
 apptainer {
     enabled = true
     autoMounts = true
+    pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
     runOptions = "--nv -B ${projectDir}/models/af2_initial_guess/model_weights:/app/dl_binder_design/af2_initial_guess/model_weights"
 }
