--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -1,7 +1,21 @@
-params {
-    models_basepath = '/scratch2/kl63/apdi/nf-binder-design/models'
-    container_basepath = '/scratch2/kl63/apdi/nf-binder-design/containers'
+// params {
+//     models_basepath = '/scratch2/kl63/apdi/nf-binder-design/models'
+//     slurm_account = 'yt41'
 
+    /*
+    containers {
+        get_contigs = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_fastrelax:latest"
+        renumber_residues = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_fastrelax:latest"
+        silenttools = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_fastrelax:latest"
+        rfdiffusion = "ghcr.io/australian-protein-design-initiative/containers/rfdiffusion:pytorch2407"
+        dl_binder_design_proteinmpnn = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_dl_binder_design:latest"
+        af2_initial_guess = "ghcr.io/australian-protein-design-initiative/containers/af2_initial_guess:nv-cuda12"
+        combine_scores = "ghcr.io/australian-protein-design-initiative/containers/mdanalysis:2.8.0"
+    }
+    */
+
+    /*
+    container_basepath = '/scratch2/kl63/apdi/nf-binder-design/containers'
     containers {
         rfdiffusion = "${container_basepath}/rfdiffusion_pytorch2407-weights-b44206a.sif"
         silenttools = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
@@ -9,12 +23,12 @@ params {
         af2_initial_guess = "${container_basepath}/af2_initial_guess_nv-cuda12.sif"
         get_contigs = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
         renumber_residues = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
-        //combine_scores = "${container_basepath}/rfdiffusion_pytorch2407-weights-b44206a.sif"
         combine_scores = "${container_basepath}/ghcr.io_australian-protein-design-initiative_containers_mdanalysis_2.8.0.sif"
     }
+    */
+//}
 
-    slurm_account = 'yt41'
-}
+params.slurm_account = false
 
 def random_choice(choices) {
     return choices[new Random().nextInt(choices.size())]
@@ -40,26 +54,27 @@ process {
     }
 
     withName: GET_CONTIGS {
-        container = params.containers.get_contigs
+        //container = params.containers.get_contigs
         executor = 'local'
     }
 
     withName: RENUMBER_RESIDUES {
-        container = params.containers.renumber_residues
+        //container = params.containers.renumber_residues
         executor = 'local'
     }
 
     withName: COMBINE_SCORES {
-        container = params.containers.combine_scores
+        //container = params.containers.combine_scores
         executor = 'local'
     }
 
     withName: RFDIFFUSION {
+        //container = params.containers.rfdiffusion
+        
         //clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=m3h --qos=m3h"
-        clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=bdi --qos=bdiq"
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--gres=gpu:1 --partition=bdi --qos=bdiq"
         time = 2.hours
 
-        container = params.containers.rfdiffusion
         accelerator = 1
 
         memory = '64g'
@@ -67,27 +82,23 @@ process {
     }
     
     withName: RFDIFFUSION_PARTIAL {
-        container = params.containers.rfdiffusion
+        //container = params.containers.rfdiffusion
 
         // clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=m3h --qos=m3h"
-        clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=bdi --qos=bdiq"
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--gres=gpu:1 --partition=bdi --qos=bdiq"
         time = 30.minutes
 
         accelerator = 1
         memory = '64g'
         cpus = 16
     }
-
-    withName: SILENT_FROM_PDBS {
-        container = params.containers.silenttools
-    }
     
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
-        container = params.containers.dl_binder_design_proteinmpnn
+        //container = params.containers.dl_binder_design_proteinmpnn
 
         // CPU only
         // clusterOptions = "--account df22 --partition=genomics --qos=genomics"
-        clusterOptions = "--account ${params.slurm_account} --partition=comp --qos=shortq"
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--partition=comp --qos=shortq"
         time = 30.minutes
 
         memory = '4g'
@@ -95,11 +106,11 @@ process {
     }
     
     withName: AF2_INITIAL_GUESS {
-        container = params.containers.af2_initial_guess
+        //container = params.containers.af2_initial_guess
         accelerator = 1
 
         // H100-80G
-        clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=m3h --qos=m3h"
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--gres=gpu:1 --partition=m3h --qos=m3h"
         // A100 (40G?)
         //clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=bdi --qos=bdiq"
 
@@ -114,6 +125,8 @@ process {
 apptainer {
     enabled = true
     autoMounts = true
+    pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
-    runOptions = "--nv -B /scratch2 -B /fs04 -B ${params.models_basepath}/af2_initial_guess/model_weights:/app/dl_binder_design/af2_initial_guess/model_weights -B ${params.models_basepath}:/models"
+    runOptions = "--nv -B /scratch2 -B /fs04 -B /mnt/reference2/alphafold/alphafold_20240229:/app/dl_binder_design/af2_initial_guess/model_weights"
+    // -B ${params.models_basepath}:/models
 }
