--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -22,17 +22,17 @@ process {
     }
 
     withName: GET_CONTIGS {
-        container = params.containers.get_contigs
+        //container = params.containers.get_contigs
         executor = 'local'
     }
     
     withName: RENUMBER_RESIDUES {
-        container = params.containers.renumber_residues
+        //container = params.containers.renumber_residues
         executor = 'local'
     }
 
     withName: COMBINE_SCORES {
-        container = params.containers.combine_scores
+        //container = params.containers.combine_scores
         executor = 'local'
     }
 
@@ -47,7 +47,7 @@ process {
         // clusterOptions = '--gres=' + random_choice(['gpu:2g.10gb:1', 'gpu:3g.20gb:1']) + ' --partition=BigCats --qos=cheetah'
         // time = 30.minutes
 
-        container = params.containers.rfdiffusion
+        //container = params.containers.rfdiffusion
         accelerator = 1
 
         memory = '24g' // '8g' is probably enough
@@ -55,7 +55,7 @@ process {
     }
     
     withName: RFDIFFUSION_PARTIAL {
-        container = params.containers.rfdiffusion
+        //container = params.containers.rfdiffusion
         accelerator = 1
         time = 24.hours
 
@@ -64,11 +64,11 @@ process {
     }
     
     withName: SILENT_FROM_PDBS {
-        container = params.containers.silenttools
+        //container = params.containers.silenttools
     }
     
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
-        container = params.containers.dl_binder_design_proteinmpnn
+        //container = params.containers.dl_binder_design_proteinmpnn
         
         // CPU only on MLeRP
         clusterOptions = '--partition=BigCats --qos=panther'
@@ -83,7 +83,7 @@ process {
     }
     
     withName: AF2_INITIAL_GUESS {
-        container = params.containers.af2_initial_guess
+        //container = params.containers.af2_initial_guess
         accelerator = 1
 
 
@@ -103,6 +103,7 @@ process {
 apptainer {
     enabled = true
     autoMounts = true
+    pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
     runOptions = "--nv -B /mnt/userdata2 -B /mnt/userdata3 -B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights"
     // '-B /home/andrewpe/projects/apdi/alphafold/2022-12-06/model_weights:/app/dl_binder_design/af2_initial_guess/model_weights'
