Add step name folder to filtering output
This allows us to re-use FILTER_DESIGNS after different steps in the pipeline and keep the results cleanly separated.
Add FILTER_DESIGNS to nextflow.config files

--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -31,6 +31,10 @@ process {
         executor = 'local'
     }
 
+    withName: FILTER_DESIGNS {
+        executor = 'local'
+    }
+
     withName: COMBINE_SCORES {
         //container = params.containers.combine_scores
         executor = 'local'
