--- a/conf/platforms/rotibom-hyperqueue.config
+++ b/conf/platforms/rotibom-hyperqueue.config
@@ -17,6 +17,10 @@ process {
         //container = params.containers.renumber_residues
     }
 
+    withName: FILTER_DESIGNS {
+        executor = 'local'
+    }
+
     withName: COMBINE_SCORES {
         //container = params.containers.combine_scores
         executor = 'local'
