--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -63,6 +63,10 @@ process {
         executor = 'local'
     }
 
+    withName: FILTER_DESIGNS {
+        executor = 'local'
+    }
+
     withName: COMBINE_SCORES {
         //container = params.containers.combine_scores
         executor = 'local'
