--- a/nextflow.config
+++ b/nextflow.config
@@ -31,6 +31,10 @@ process {
         executor = 'local'
     }
 
+    withName: FILTER_DESIGNS {
+        executor = 'local'
+    }
+
     withName: COMBINE_SCORES {
         //container = params.containers.combine_scores
         executor = 'local'
