--- a/nextflow.config
+++ b/nextflow.config
@@ -116,6 +116,8 @@ apptainer {
 }
 
 docker {
+    enabled = false
+
     // --gpus all to enable NVIDIA GPU support
     // enabled = true
     runOptions = '--gpus all'
@@ -127,6 +129,7 @@ profiles {
             name = 'local'
             queueSize = 32
             pollInterval = '30 sec'
+            submitRateLimit = '1/10sec'
         }
         process {
             executor = 'local'
@@ -155,6 +158,7 @@ profiles {
             name = 'hq'
             queueSize = 900
             pollInterval = '5 sec'
+            submitRateLimit = '1/10sec'
         }
         process {
             executor = 'hq'
