Add BindCraft processes to configs

--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -158,6 +158,21 @@ process {
         memory = '64g'
         cpus = 2
     }
+
+    withName: BINDCRAFT_CREATE_SETTINGS {
+        executor = 'local'
+    }
+
+    withName: BINDCRAFT {
+        accelerator = 1
+        time = 2.hours
+        memory = '32g'
+        cpus = 16
+        
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--gres=gpu:1 --partition=gpu"
+        // A100/A40
+        // clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=bdi --qos=bdiq"
+    }
 }
 
 // Apptainer specific settings
