--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -90,16 +90,65 @@ process {
         //container = params.containers.af2_initial_guess
         accelerator = 1
 
-
         clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
         time = 24.hours
 
         // suitable for smaller targets
-        //clusterOptions = '--gres=gpu:3g.20gb:1 --qos=lion --partition=BigCats'
+        //clusterOptions = '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=lion'
         //time = 30.minutes
 
         memory = '16g'
         cpus = 4
+    }
+
+    withName: BINDCRAFT_CREATE_SETTINGS {
+        executor = 'local'
+    }
+    withName: CREATE_BOLTZ_YAML {
+        executor = 'local'
+    }
+
+    withName: PARSE_BOLTZ_CONFIDENCE_JSON {
+        executor = 'local'
+    }
+
+    withName: MMSEQS_COLABFOLDSEARCH {
+        clusterOptions = "--partition=BigCats --qos=panther"
+        time = 4.hours
+        memory = '64g'
+        cpus = 16
+
+        // Load index into RAM
+        //ext.args = "--db-load-mode 2"
+    }
+
+    withName: BOLTZ {
+        accelerator = 1
+        cpus = 2
+
+        clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
+        time = 1.hours
+
+        // suitable for smaller targets
+        //clusterOptions = '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=lion'
+        //time = 30.minutes
+    }
+
+    withName: BINDCRAFT_CREATE_SETTINGS {
+        executor = 'local'
+    }
+
+    withName: BINDCRAFT {
+        accelerator = 1
+        memory = '32g'
+        cpus = 16
+        
+        clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
+        time = 2.hours
+
+        // suitable for smaller targets
+        //clusterOptions = '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=lion'
+        //time = 30.minutes
     }
 }
 
