--- a/conf/platforms/rotibom-hyperqueue.config
+++ b/conf/platforms/rotibom-hyperqueue.config
@@ -11,10 +11,12 @@ process {
 
     withName: GET_CONTIGS {
         //container = params.containers.get_contigs
+        executor = 'local'
     }
     
     withName: RENUMBER_RESIDUES {
         //container = params.containers.renumber_residues
+        executor = 'local'
     }
 
     withName: FILTER_DESIGNS {
@@ -29,6 +31,7 @@ process {
     withName: RFDIFFUSION {
         //container = params.containers.rfdiffusion
         clusterOptions = "--resource gpus/nvidia=1"
+        accelerator = null
         time = 24.hours
 
         memory = '8g' // '8g' is probably enough
@@ -38,22 +41,19 @@ process {
     withName: RFDIFFUSION_PARTIAL {
         //container = params.containers.rfdiffusion
         clusterOptions = "--resource gpus/nvidia=1"
+        accelerator = null
         time = 24.hours
 
-        memory = '8g' // '8g' is probably enough
+        memory = '2g' // '8g' is probably enough
         cpus = 2
-    }
-    
-    withName: SILENT_FROM_PDBS {
-        //container = params.containers.silenttools
     }
     
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
         //container = params.containers.dl_binder_design_proteinmpnn
         
-        // Since this is effectively CPU only and quick, we probably can also just
-        // run it on the local node
+        // ProteinMPNN doesn't really benefit from GPUs, so we run this on CPU only
         //clusterOptions = "--resource gpus/nvidia=1"
+        //accelerator = null
 
         time = 30.minutes
         memory = '4g'
@@ -63,10 +63,46 @@ process {
     withName: AF2_INITIAL_GUESS {
         //container = params.containers.af2_initial_guess
         clusterOptions = "--resource gpus/nvidia=1"
+        accelerator = null
         time = 30.minutes
         memory = '16g'
         cpus = 4
 
+    }
+
+    withName: CREATE_BOLTZ_YAML {
+        executor = 'local'
+    }
+
+    withName: PARSE_BOLTZ_CONFIDENCE_JSON {
+        executor = 'local'
+    }
+
+    withName: MMSEQS_COLABFOLDSEARCH {
+        time = 4.hours
+        memory = '32g'
+        cpus = 8
+    }
+
+    withName: BOLTZ {
+        clusterOptions = "--resource gpus/nvidia=1"
+        accelerator = null
+        time = 2.hours
+        memory = '8g'
+        cpus = 2
+    }
+
+    withName: BINDCRAFT_CREATE_SETTINGS {
+        executor = 'local'
+    }
+
+    withName: BINDCRAFT {
+        accelerator = 1
+        time = 2.hours
+        memory = '32g'
+        cpus = 16
+        
+        clusterOptions = "--resource gpus/nvidia=1"
     }
 }
 
@@ -80,6 +116,8 @@ apptainer {
 }
 
 docker {
+    enabled = false
+
     // --gpus all to enable NVIDIA GPU support
     runOptions = '--gpus all'
 }
