--- a/nextflow.config
+++ b/nextflow.config
@@ -10,10 +10,6 @@ manifest {
     // doi             = 'TBD'
 }
 
-params {
-    models_basepath = "${projectDir}/models"
-}
-
 process {
     executor = 'slurm'
     stageInMode = 'symlink'
@@ -102,6 +98,17 @@ process {
         
         // if using CPU only
         // ext.args = "--accelerator cpu"
+    }
+
+    withName: BINDCRAFT_CREATE_SETTINGS {
+        executor = 'local'
+    }
+
+    withName: BINDCRAFT {
+        accelerator = 1
+        time = 2.hours
+        memory = '32g'
+        cpus = 16
     }
 }
 
