--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,13 @@ manifest {
     // doi             = 'TBD'
 }
 
+params {
+    // GPU-related parameters used across multiple modules
+    require_gpu = true
+    gpu_devices = ''
+    gpu_allocation_detect_process_regex = '(python.*/app/dl_binder_design/af2_initial_guess/predict\\.py|python.*/app/BindCraft/bindcraft\\.py|boltz predict|python.*/app/RFdiffusion/scripts/run_inference\\.py)'
+}
+
 process {
     executor = 'slurm'
     stageInMode = 'symlink'
