Tweaks to m3 and mlerp nextflow configs

--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -45,7 +45,7 @@ process {
         time = 24.hours
 
         // suitable for smaller targets
-        // clusterOptions = '--gres=gpu:2g.10gb:1 --partition=BigCats --qos=cheetah'
+        // clusterOptions = '--gres=gpu:1 --partition=BigCats --qos=cheetah'
 
         // suitable for smaller targets
         // clusterOptions = '--gres=' + random_choice(['gpu:2g.10gb:1', 'gpu:3g.20gb:1']) + ' --partition=BigCats --qos=cheetah'
@@ -61,14 +61,16 @@ process {
     withName: RFDIFFUSION_PARTIAL {
         //container = params.containers.rfdiffusion
         accelerator = 1
+
+        clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
         time = 24.hours
 
+        // suitable for smaller targets
+        // clusterOptions = '--gres=gpu:1 --partition=BigCats --qos=cheetah'
+        // time = 30.minutes
+        
         memory = '8g' // '8g' is probably enough
         cpus = 2
-    }
-    
-    withName: SILENT_FROM_PDBS {
-        //container = params.containers.silenttools
     }
     
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
