--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -180,8 +180,12 @@ apptainer {
     enabled = true
     autoMounts = true
     pullTimeout = 3.hours
+    
     // --nv to enable NVIDIA GPU support
-    runOptions = "--nv -B /scratch2 -B /fs04 -B /mnt/reference2/alphafold/alphafold_20240229:/app/dl_binder_design/af2_initial_guess/model_weights"
+    // runOptions = "--nv -B /scratch2 -B /fs04 -B /mnt/reference2/alphafold/alphafold_20240229:/app/dl_binder_design/af2_initial_guess/model_weights"
     // -B ${params.models_basepath}:/models
+    
+    runOptions = "--nv -B /scratch2 -B /fs04"
+
     envWhitelist = ['BOLTZ_CACHE']
 }
