Default local queue size to 1 (for single GPU)

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,13 +1,13 @@
 manifest {
     name            = 'nf-binder-design'
-    author          = """Andrew Perry"""
+    author          = '''Andrew Perry'''
     homePage        = 'https://github.com/Australian-Protein-Design-Initiative/nf-binder-design'
-    description     = """Protein binder design pipeline"""
+    description     = '''Protein binder design pipeline'''
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
     version         = '0.1.4'
     defaultBranch   = 'main'
-    // doi             = 'TBD'
+// doi             = 'TBD'
 }
 
 params {
@@ -60,20 +60,19 @@ process {
         memory = '8g' // '8g' is probably enough
         cpus = 2
     }
-    
+
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
         //container = params.containers.dl_binder_design_proteinmpnn
-        
+
         // Since this is effectively CPU only and quick, we probably can also just
         // run it on the local node
         //accelerator = 1
-
 
         time = 30.minutes
         memory = '4g'
         cpus = 1
     }
-    
+
     withName: AF2_INITIAL_GUESS {
         //container = params.containers.af2_initial_guess
 
@@ -102,9 +101,9 @@ process {
         time = 2.hours
         memory = '8g'
         cpus = 2
-        
-        // if using CPU only
-        // ext.args = "--accelerator cpu"
+
+    // if using CPU only
+    // ext.args = "--accelerator cpu"
     }
 
     withName: BINDCRAFT_CREATE_SETTINGS {
@@ -126,6 +125,8 @@ apptainer {
     pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
     runOptions = '--nv --cleanenv'
+    // To override the default --no-home flag without using NXF_APPTAINER_HOME_MOUNT=true
+    // -B ${HOME}
     // runOptions = '--nv -B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights'
 }
 
@@ -141,7 +142,9 @@ profiles {
     local {
         executor {
             name = 'local'
-            queueSize = 32
+            // this should be overridden for workstations with multiple GPUs to allow more than
+            // one simultaneous task.
+            queueSize = 1
             pollInterval = '30 sec'
             submitRateLimit = '1/10sec'
         }
