Update m3 and mlerp configs

--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -36,9 +36,9 @@ def random_choice(choices) {
 
 executor {
     $slurm {
-      queueSize = 200
-      pollInterval = '30 sec'
-      queueStatInterval = '10m'
+        queueSize = 200
+        pollInterval = '30 sec'
+        queueStatInterval = '10m'
     }
 }
 
@@ -48,7 +48,7 @@ process {
     errorStrategy = 'retry'
     maxRetries = 1
     cache = 'lenient'
-    
+
     withName: UNIQUE_ID {
         executor = 'local'
     }
@@ -74,9 +74,9 @@ process {
 
     withName: RFDIFFUSION {
         //container = params.containers.rfdiffusion
-        
+
         //clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=m3h --qos=m3h"
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--gres=gpu:1 --partition=bdi --qos=bdiq"
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--gres=gpu:1 --partition=bdi --qos=bdiq'
         time = 2.hours
 
         accelerator = 1
@@ -84,37 +84,37 @@ process {
         memory = '64g'
         cpus = 16
     }
-    
+
     withName: RFDIFFUSION_PARTIAL {
         //container = params.containers.rfdiffusion
 
         // clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=m3h --qos=m3h"
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--gres=gpu:1 --partition=bdi --qos=bdiq"
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--gres=gpu:1 --partition=bdi --qos=bdiq'
         time = 30.minutes
 
         accelerator = 1
         memory = '64g'
         cpus = 16
     }
-    
+
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
         //container = params.containers.dl_binder_design_proteinmpnn
 
         // CPU only
         // clusterOptions = "--account df22 --partition=genomics --qos=genomics"
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--partition=comp --qos=shortq"
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--partition=comp --qos=shortq'
         time = 30.minutes
 
         memory = '4g'
         cpus = 1
     }
-    
+
     withName: AF2_INITIAL_GUESS {
         //container = params.containers.af2_initial_guess
         accelerator = 1
 
         // H100-80G
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--gres=gpu:1 --partition=m3h --qos=m3h"
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--gres=gpu:1 --partition=m3h --qos=m3h'
         // A100 (40G?)
         //clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=bdi --qos=bdiq"
 
@@ -133,24 +133,24 @@ process {
     }
 
     withName: MMSEQS_COLABFOLDSEARCH {
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--partition=comp"
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--partition=comp'
         time = 4.hours
         memory = '64g'
         cpus = 16
 
-        //clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--partition=genomics --qos=genomics"
-        //time = 4.hours
-        //memory = '128g' // '360g'
-        //cpus = 24       // 48
-        // Load index into RAM
-        //ext.args = "--db-load-mode 2"
+    //clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--partition=genomics --qos=genomics"
+    //time = 4.hours
+    //memory = '128g' // '360g'
+    //cpus = 24       // 48
+    // Load index into RAM
+    //ext.args = "--db-load-mode 2"
     }
 
     withName: BOLTZ {
         accelerator = 1
 
         // H100-80G
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--gres=gpu:1 --partition=gpu"
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--gres=gpu:1 --partition=gpu'
         // A100 (40G?)
         //clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=bdi --qos=bdiq"
 
@@ -168,10 +168,10 @@ process {
         time = 2.hours
         memory = '32g'
         cpus = 16
-        
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--gres=gpu:1 --partition=gpu"
-        // A100/A40
-        // clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=bdi --qos=bdiq"
+
+        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--gres=gpu:1 --partition=gpu'
+    // A100/A40
+    // clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=bdi --qos=bdiq"
     }
 }
 
@@ -180,12 +180,13 @@ apptainer {
     enabled = true
     autoMounts = true
     pullTimeout = 3.hours
-    
+
     // --nv to enable NVIDIA GPU support
     // runOptions = "--nv -B /scratch2 -B /fs04 -B /mnt/reference2/alphafold/alphafold_20240229:/app/dl_binder_design/af2_initial_guess/model_weights"
     // -B ${params.models_basepath}:/models
-    
-    runOptions = "--nv -B /scratch2 -B /fs04"
 
+    runOptions = '--nv -B /scratch2 -B /fs04'
+    // To override the default --no-home flag without using NXF_APPTAINER_HOME_MOUNT=true
+    // -B ${HOME}
     envWhitelist = ['BOLTZ_CACHE']
 }
