--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -4,17 +4,18 @@ def random_choice(choices) {
 
 executor {
     $slurm {
-      queueSize = 200
-      pollInterval = '30 sec'
-      queueStatInterval = '10m'
+        queueSize = 200
+        pollInterval = '30 sec'
+        queueStatInterval = '10m'
     }
 }
 
 process {
     executor = 'slurm'
     stageInMode = 'symlink'
-    // errorStrategy = 'retry'
-    maxRetries = 0
+    errorStrategy = 'retry'
+    maxRetries = 1
+    maxErrors = 20
     cache = 'lenient'
 
     withName: UNIQUE_ID {
@@ -25,7 +26,7 @@ process {
         //container = params.containers.get_contigs
         executor = 'local'
     }
-    
+
     withName: RENUMBER_RESIDUES {
         //container = params.containers.renumber_residues
         executor = 'local'
@@ -57,7 +58,7 @@ process {
         memory = '24g' // '8g' is probably enough
         cpus = 2
     }
-    
+
     withName: RFDIFFUSION_PARTIAL {
         //container = params.containers.rfdiffusion
         accelerator = 1
@@ -68,14 +69,14 @@ process {
         // suitable for smaller targets
         // clusterOptions = '--gres=gpu:1 --partition=BigCats --qos=cheetah'
         // time = 30.minutes
-        
+
         memory = '8g' // '8g' is probably enough
         cpus = 2
     }
-    
+
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
         //container = params.containers.dl_binder_design_proteinmpnn
-        
+
         // CPU only on MLeRP
         clusterOptions = '--partition=BigCats --qos=panther'
         time = 30.minutes
@@ -87,7 +88,7 @@ process {
         memory = '4g'
         cpus = 1
     }
-    
+
     withName: AF2_INITIAL_GUESS {
         //container = params.containers.af2_initial_guess
         accelerator = 1
@@ -115,13 +116,13 @@ process {
     }
 
     withName: MMSEQS_COLABFOLDSEARCH {
-        clusterOptions = "--partition=BigCats --qos=panther"
+        clusterOptions = '--partition=BigCats --qos=panther'
         time = 4.hours
         memory = '64g'
         cpus = 16
 
-        // Load index into RAM
-        //ext.args = "--db-load-mode 2"
+    // Load index into RAM
+    //ext.args = "--db-load-mode 2"
     }
 
     withName: BOLTZ {
@@ -131,9 +132,9 @@ process {
         clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
         time = 1.hours
 
-        // suitable for smaller targets
-        //clusterOptions = '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=lion'
-        //time = 30.minutes
+    // suitable for smaller targets
+    //clusterOptions = '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=lion'
+    //time = 30.minutes
     }
 
     withName: BINDCRAFT_CREATE_SETTINGS {
@@ -142,15 +143,27 @@ process {
 
     withName: BINDCRAFT {
         accelerator = 1
-        memory = '32g'
-        cpus = 16
-        
-        clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
-        time = 2.hours
+        //memory = '32g'
+        memory = { task.attempt <= 1 ? '32g' : '64g' }
 
-        // suitable for smaller targets
+        cpus = 16
+
+        // typical targets, 40gb VRAM
+        //clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
+        //time = 2.hours
+
+        // suitable for smaller targets, 20gb VRAM
         //clusterOptions = '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=lion'
         //time = 30.minutes
+
+        // Try using 20gb VRAM, use 40gb after first failure.
+        // This is helpful for run where 20gb is usually enough, but a fraction of
+        // binder lengths are too long for 20gb.
+        clusterOptions = {
+            task.attempt <= 1 ?
+                '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=cheetah' :
+                '--gres=gpu:1 --partition=BigCats --qos=lion'
+        }
     }
 }
 
@@ -160,6 +173,8 @@ apptainer {
     autoMounts = true
     pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
-    runOptions = "--nv -B /mnt/userdata2 -B /mnt/userdata3 -B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights"
-    // '-B /home/andrewpe/projects/apdi/alphafold/2022-12-06/model_weights:/app/dl_binder_design/af2_initial_guess/model_weights'
+    runOptions = '--nv -B /mnt/userdata2 -B /mnt/userdata3 -B /mnt/userdata4'
+    // To override the default --no-home flag without using NXF_APPTAINER_HOME_MOUNT=true
+    // -B ${HOME}
+    // runOptions = "--nv -B /mnt/userdata2 -B /mnt/userdata3 -B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights"
 }
