--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -1,32 +1,6 @@
-// params {
-//     models_basepath = '/scratch2/kl63/apdi/nf-binder-design/models'
-//     slurm_account = 'yt41'
-
-    /*
-    containers {
-        get_contigs = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_fastrelax:latest"
-        renumber_residues = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_fastrelax:latest"
-        silenttools = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_fastrelax:latest"
-        rfdiffusion = "ghcr.io/australian-protein-design-initiative/containers/rfdiffusion:pytorch2407"
-        dl_binder_design_proteinmpnn = "ghcr.io/australian-protein-design-initiative/containers/proteinmpnn_dl_binder_design:latest"
-        af2_initial_guess = "ghcr.io/australian-protein-design-initiative/containers/af2_initial_guess:nv-cuda12"
-        combine_scores = "ghcr.io/australian-protein-design-initiative/containers/mdanalysis:2.8.0"
-    }
-    */
-
-    /*
-    container_basepath = '/scratch2/kl63/apdi/nf-binder-design/containers'
-    containers {
-        rfdiffusion = "${container_basepath}/rfdiffusion_pytorch2407-weights-b44206a.sif"
-        silenttools = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
-        dl_binder_design_proteinmpnn = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
-        af2_initial_guess = "${container_basepath}/af2_initial_guess_nv-cuda12.sif"
-        get_contigs = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
-        renumber_residues = "${container_basepath}/proteinmpnn_fastrelax_latest.sif"
-        combine_scores = "${container_basepath}/ghcr.io_australian-protein-design-initiative_containers_mdanalysis_2.8.0.sif"
-    }
-    */
-//}
+/*
+ * This is a configuration specific to users of the M3 / MASSIVE HPC cluster at Monash University.
+ */
 
 params.slurm_account = false
 
@@ -75,10 +49,16 @@ process {
     withName: RFDIFFUSION {
         //container = params.containers.rfdiffusion
 
-        //clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=m3h --qos=m3h"
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--gres=gpu:1 --partition=bdi --qos=bdiq'
-        time = 2.hours
+        // GPU partition
+        clusterOptions = '--gres=gpu:1 --partition=gpu' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
 
+        // H100-80G
+        // clusterOptions = "--gres=gpu:1 --partition=m3h --qos=m3h" + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
+        // BDI: A100/A40
+        //clusterOptions = '--gres=gpu:1 --partition=bdi --qos=bdiq' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
+        time = 2.hours
         accelerator = 1
 
         memory = '64g'
@@ -88,10 +68,16 @@ process {
     withName: RFDIFFUSION_PARTIAL {
         //container = params.containers.rfdiffusion
 
-        // clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=m3h --qos=m3h"
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--gres=gpu:1 --partition=bdi --qos=bdiq'
-        time = 30.minutes
+        // GPU partition
+        clusterOptions = '--gres=gpu:1 --partition=gpu' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
 
+        // H100-80G
+        // clusterOptions = "--gres=gpu:1 --partition=m3h --qos=m3h" + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
+        // BDI: A100/A40
+        //clusterOptions = '--gres=gpu:1 --partition=bdi --qos=bdiq' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
+        time = 30.minutes
         accelerator = 1
         memory = '64g'
         cpus = 16
@@ -101,8 +87,8 @@ process {
         //container = params.containers.dl_binder_design_proteinmpnn
 
         // CPU only
-        // clusterOptions = "--account df22 --partition=genomics --qos=genomics"
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--partition=comp --qos=shortq'
+        // clusterOptions = "--partition=genomics --qos=genomics" + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+        clusterOptions = '--partition=comp --qos=shortq' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
         time = 30.minutes
 
         memory = '4g'
@@ -113,10 +99,14 @@ process {
         //container = params.containers.af2_initial_guess
         accelerator = 1
 
+        // GPU partition
+        clusterOptions = '--gres=gpu:1 --partition=gpu' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
         // H100-80G
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--gres=gpu:1 --partition=m3h --qos=m3h'
-        // A100 (40G?)
-        //clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=bdi --qos=bdiq"
+        //clusterOptions = '--gres=gpu:1 --partition=m3h --qos=m3h' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
+        // BDI: A100/A40
+        //clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq" + (params.slurm_account ? " --account=${params.slurm_account} " : '')
 
         time = 2.hours
 
@@ -133,12 +123,14 @@ process {
     }
 
     withName: MMSEQS_COLABFOLDSEARCH {
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--partition=comp'
+        // comp partition
+        clusterOptions = '--partition=comp' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
         time = 4.hours
         memory = '64g'
         cpus = 16
 
-    //clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : "") + "--partition=genomics --qos=genomics"
+    // genomics partition
+    //clusterOptions = "--partition=genomics --qos=genomics" + (params.slurm_account ? " --account=${params.slurm_account} " : "")
     //time = 4.hours
     //memory = '128g' // '360g'
     //cpus = 24       // 48
@@ -149,10 +141,11 @@ process {
     withName: BOLTZ {
         accelerator = 1
 
-        // H100-80G
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--gres=gpu:1 --partition=gpu'
-        // A100 (40G?)
-        //clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=bdi --qos=bdiq"
+        // GPU partition
+        clusterOptions = '--gres=gpu:1 --partition=gpu' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
+        // BDI: A100/A40
+        //clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq" + (params.slurm_account ? " --account=${params.slurm_account} " : '')
 
         time = 1.hours
         memory = '64g'
@@ -169,9 +162,11 @@ process {
         memory = '32g'
         cpus = 16
 
-        clusterOptions = (params.slurm_account ? "--account=${params.slurm_account} " : '') + '--gres=gpu:1 --partition=gpu'
-    // A100/A40
-    // clusterOptions = "--account ${params.slurm_account} --gres=gpu:1 --partition=bdi --qos=bdiq"
+        // GPU partition
+        clusterOptions = '--gres=gpu:1 --partition=gpu' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
+        // BDI: A100/A40
+        // clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq" + (params.slurm_account ? " --account=${params.slurm_account} " : '')
     }
 }
 
