Fix m3-bdi.config variable definition (def)

--- a/conf/platforms/m3-bdi.config
+++ b/conf/platforms/m3-bdi.config
@@ -24,7 +24,7 @@
 
 params.slurm_account = false
 
-account_option = (params.slurm_account ? " --account=${params.slurm_account} " : '')
+def account_option = (params.slurm_account ? " --account=${params.slurm_account} " : '')
 
 def random_choice(choices) {
     return choices[new Random().nextInt(choices.size())]
